[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyQA"
version = "0.0.1"
authors = [
  { name="Montek", email="montekkundan@gmail.com" },
]
description = "automationg web using simple functions"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NetzOptimize/pyQA"
"Bug Tracker" = "https://github.com/NetzOptimize/pyQA/issues"